# ETI

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI_HANDOFF.md  README.md  apex.db  docker-compose.yml  plan.md
backend/: .env.example  Dockerfile  alembic.ini  apex.db  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_apex.db
backend/alembic/: env.py
backend/alembic/versions/: 9950ea4ee152_create_audit_logs_table.py  ab49fd8f4b26_add_audit_logs_schema.py  f8b2a9662a68_initial_schema_migration.py
backend/app/: __init__.py  main.py
backend/app/connectors/: base.py
backend/app/core/: auth.py  celery_app.py  config.py  error_handlers.py  exceptions.py  metrics.py  rate_limiter.py  storage.py  (+1 more)
backend/local_qdrant/: meta.json
backend/scripts/: audit_runtime.py  generate_mock_pdf.py  live_api_validation.py  live_rag_validation.py  production_smoke_test.py  test_db_qdrant.py  test_decision.py  test_e2e.py  test_embeds.py  test_graph.py  test_ingestion.py  test_memory_compliance.py  test_models.py  test_runbook.py  test_search.py  test_simulation.py  test_stress.py  validate_sprint7_scenarios.py
backend/tests/: conftest.py  test_api_validation.py  test_audit.py  test_audit_logging.py  test_auth.py  test_auth_hardening.py  test_basic.py  test_compliance.py  test_decision.py  test_documents.py  test_explainability.py  test_graph.py  test_health.py  test_integration.py  test_memory.py  test_milestone8_suite.py  test_observability.py  test_rate_limiting.py  test_runbook.py  test_runtime_stability.py  test_search.py  test_simulation.py
(+196 files in other folders)
